force-app/main/default/objects/Conga_Bulk_Processing__c.object
<CustomObject>
    <description>Used to generate documents in bulk via Conga</description>
    <fields>
        <fullName>Conga_Template_Id__c</fullName>
        <label>Conga Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Conga_Bulk_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_BCC__c</fullName>
        <label>Email BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_From_Id__c</fullName>
        <label>Email From Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Division__c</fullName>
        <label>Faculty/Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street__c + &apos;, &apos; +  Suburb__c + &apos; &apos; +  State__c + &apos; &apos; +  Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Title__c)), Title__c + &apos; &apos;, &apos;&apos;) + IF(NOT(ISBLANK(First_name__c)), First_name__c + &apos; &apos;, &apos;&apos;) + IF(NOT(ISBLANK(Last_name__c)), Last_name__c + &apos; &apos;, &apos;&apos;)</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Work_Location__c</fullName>
        <formula>Work_Location_Campus__c + &apos; - &apos; + Work_Location_Address__c</formula>
        <label>Full Work Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Child_Care_Permit_Conga_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;contactid=&quot; + Contact__r.Id +
&quot;&amp;templateid=&quot; + Conga_Template_Id__c +
&quot;&amp;uf0=1&quot; +
&quot;&amp;mfts0=Status__c&quot; +
&quot;&amp;mftsvalue0=Permit Issued&quot; +
&quot;&amp;PS0=1&amp;PS1=1&quot; +
&quot;&amp;pspw=&quot; + SAP_Staff_Id__c + Date_of_Birth__c +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;qmode=SendEmail&quot; +
&quot;&amp;emailtemplateid=&quot; + Email_Template_Id__c +
&quot;&amp;emailfromid=&quot; + Email_From_Id__c +
&quot;&amp;emailtoid=&quot; + Contact__r.Id +
&quot;&amp;EmailSubject=&quot; + Subject_Content__c + &apos; - &apos; + Full_Name__c +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;seti=&quot; + Contact__r.Id +
&quot;&amp;ofn=&quot; + Full_Name__c + &apos; &apos; + Subject_Content__c + &apos; &apos; + TEXT(DAY(TODAY()))+TEXT(MONTH(TODAY()))+TEXT(YEAR(TODAY())) +
&quot;&amp;EmailBCC=&quot; + Email_BCC__c</formula>
        <label>Generate Child Care Permit Conga Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisational_Unit_Text__c</fullName>
        <label>Organisational Unit Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Childcare Permit</fullName>
                </value>
                <value>
                    <fullName>Work Permit</fullName>
                </value>
                <value>
                    <fullName>Placement Permit</fullName>
                </value>
                <value>
                    <fullName>Student Permit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permitted_Worker_Category__c</fullName>
        <label>Permitted Worker Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Staff_Id__c</fullName>
        <label>Staff ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Division__c</fullName>
        <label>School/Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Processing</fullName>
                    <default>true</default>
                    <label>Ready for Processing</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Permit Issued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Content__c</fullName>
        <label>Subject Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Location_Address__c</fullName>
        <label>Work Location (Address)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Location_Campus__c</fullName>
        <label>Work Location (Campus)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bulk Permit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Monash_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Childcare_Permit_Issued</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Faculty_Division__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Permit Issued</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Work Permit</value>
        </filters>
        <label>All Work Permit Issued</label>
    </listViews>
    <listViews>
        <fullName>All_MonashConnect_Permits</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>First_name__c</columns>
        <columns>Last_name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Permit_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Location_Address__c</columns>
        <columns>Work_Location_Campus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Placement Permit,Student Permit</value>
        </filters>
        <filters>
            <field>Permitted_Worker_Category__c</field>
            <operation>equals</operation>
            <value>Study,Placement-24x7,Placement-9to5</value>
        </filters>
        <filters>
            <field>Contact__c</field>
            <operation>notEqual</operation>
            <value>Ashok Kumar Bodepudi</value>
        </filters>
        <label>All Monash Connect Permits</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Monash_Connect_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Monash_Connect_Permits_Processing</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>First_name__c</columns>
        <columns>Permitted_Worker_Category__c</columns>
        <columns>Last_name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Permit_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Location_Address__c</columns>
        <columns>Work_Location_Campus__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Placement Permit,Student Permit</value>
        </filters>
        <filters>
            <field>Permitted_Worker_Category__c</field>
            <operation>equals</operation>
            <value>Study,Placement-24x7,Placement-9to5,Study-24x7</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <label>All Monash Connect Permits - Processing</label>
        <sharedTo>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Placement_Permits</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Placement Permit</value>
        </filters>
        <label>All Placement Permits</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MNHS_Faculty_Office</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Monash_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_in_Permit_Issued_Status</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Permitted_Worker_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Permit Issued</value>
        </filters>
        <label>All in Permit Issued Status</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Monash_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_in_Permit_Issued_Status1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Faculty_Division__c</columns>
        <columns>Permit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Permit Issued</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Childcare Permit</value>
        </filters>
        <label>All Childcare Permit Issued</label>
    </listViews>
    <listViews>
        <fullName>All_in_Processing_Status</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Permitted_Worker_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <label>All in Processing Status</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Monash_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_in_Processing_Status_HR</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Work Permit</value>
        </filters>
        <label>All in Processing Status - HR</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Monash_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_in_Ready_for_Processing</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Staff_Id__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Processing</value>
        </filters>
        <label>All in Ready for Processing</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Monash_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CBP-{0000}</displayFormat>
        <label>Conga Bulk Processing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>